fixed leaderboard, main and other alignments

--- a/styles/index.css
+++ b/styles/index.css
@@ -58,15 +58,15 @@
 
     .button1 {
       position: absolute; 
-      right: 250px; 
-      bottom:200px; 
+      right: 150px; 
+      bottom:180px; 
       grid-column: 1 / 1;
     }
 
     .button2 {
       position: absolute; 
-      left: 1000px; 
-      bottom:200px; 
+      left: 900px; 
+      bottom:180px; 
       grid-column: 2 / 2;
     }
 
@@ -110,7 +110,7 @@
     .circle-txt {
       /* (E1) CENTER TEXT IN CIRCLE */
       position: absolute;
-      bottom: 50%;
+      bottom: 60%;
       width: 100%;
       text-align: center;
 
@@ -120,7 +120,19 @@
       text-shadow: -1px 0 black, 0 1px black, 2px 0 black, 0 -1px black;
       font-size: 30pt;
     }
-    
+    .circle-txt2 {
+      /* (E1) CENTER TEXT IN CIRCLE */
+      position: absolute;
+      bottom: 40%;
+      width: 100%;
+      text-align: center;
+
+      /* (E2) THE FONT - NOT REALLY IMPORTANT */
+      font-weight: bold;
+      color: yellow;
+      text-shadow: -1px 0 black, 0 1px black, 2px 0 black, 0 -1px black;
+      font-size: 30pt;
+    }
     .welcome h1 {
       font-size: 30px;
       text-align: center;
